--- a/dojo_examples/combat_game/Scarb.toml
+++ b/dojo_examples/combat_game/Scarb.toml
@@ -1,6 +1,6 @@
 [package]
 cairo-version = "=2.9.2"
-name = "dojo_starter"
+name = "combat_game"
 version = "1.1.0"
 edition = "2024_07"
 
@@ -9,8 +9,6 @@ sierra-replace-ids = true
 
 [scripts]
 migrate = "sozo build && sozo migrate"                      # scarb run migrate
-spawn = "sozo execute dojo_starter-actions spawn --wait"    # scarb run spawn
-move = "sozo execute dojo_starter-actions move -c 1 --wait" # scarb run move
 
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.1.1" }
