--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
     "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.6",
+    "@types/estree": "^1.0.7",
+    "@types/estree-jsx": "^1.0.5",
     "@types/ms": "^2.1.0",
-    "@types/react-dom": "^18.3.1",
+    "@types/react-dom": "^19.0.4",
     "@types/unist": "^3.0.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
