--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "pnpm": {
     "patchedDependencies": {
-      "vocs": "patches/vocs.patch"
+      "vocs@1.0.0-alpha.62": "patches/vocs.patch"
     },
     "overrides": {
       "vocs>shiki": "^1.23.0 <1.24.0",
