--- a/backend/dojo_examples/combat_game/Scarb.toml
+++ b/backend/dojo_examples/combat_game/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "2.9.2"
+cairo-version = "2.10.1"
 name = "combat_game"
 version = "0.1.0"
 edition = "2023_11"
@@ -11,8 +11,8 @@ sierra-replace-ids = true
 sepolia = "sozo --profile sepolia clean && sozo --profile sepolia build && sozo --profile sepolia migrate --account-address $DEPLOYER_ACCOUNT_ADDRESS --private-key $DEPLOYER_PRIVATE_KEY --fee strk"
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.2.1" }
-achievement = { git = "https://github.com/cartridge-gg/arcade", tag = "v1.2.1" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.0-alpha.1" }
+achievement = { git = "https://github.com/cartridge-gg/arcade", tag = "v1.6.0-alpha.1" }
 
 [[target.starknet-contract]]
 build-external-contracts = [
@@ -22,7 +22,7 @@ build-external-contracts = [
 ]
 
 [dev-dependencies]
-cairo_test = "2.9.2"
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.2.1" }
+cairo_test = "2.10.1"
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.0-alpha.1" }
 
 [profile.sepolia]
