--- a/backend/dojo_examples/combat_game/Scarb.toml
+++ b/backend/dojo_examples/combat_game/Scarb.toml
@@ -2,7 +2,7 @@
 cairo-version = "2.10.1"
 name = "combat_game"
 version = "0.1.0"
-edition = "2023_11"
+edition = "2024_07"
 
 [cairo]
 sierra-replace-ids = true
@@ -11,18 +11,18 @@ sierra-replace-ids = true
 sepolia = "sozo --profile sepolia clean && sozo --profile sepolia build && sozo --profile sepolia migrate --account-address $DEPLOYER_ACCOUNT_ADDRESS --private-key $DEPLOYER_PRIVATE_KEY --fee strk"
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.0-alpha.1" }
-achievement = { git = "https://github.com/cartridge-gg/arcade", tag = "v1.6.0-alpha.1" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.1" }
+achievement = { git = "https://github.com/cartridge-gg/arcade", tag = "v1.6.1" }
 
 [[target.starknet-contract]]
 build-external-contracts = [
     "dojo::world::world_contract::world",
-    "achievement::events::index::e_TrophyCreation", 
-    "achievement::events::index::e_TrophyProgression", 
+    "achievement::events::index::e_TrophyCreation",
+    "achievement::events::index::e_TrophyProgression",
 ]
 
 [dev-dependencies]
 cairo_test = "2.10.1"
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.0-alpha.1" }
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.6.1" }
 
 [profile.sepolia]
